<resources>
    <string name="app_name">Donation.1.5</string>
    <string name="amount">Amount</string>
    <string name="welcome_homer">Welcome Homer</string>
    <string name="please_give_generously">Please Give Generously</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="please_donate_us">Please donate us</string>
    <string name="donate">Donate</string>
</resources>