<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@id/Main_line_text"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <TextView
        android:id="@+id/Main_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_homer"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/Second_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/please_give_generously"
        app:layout_constraintStart_toStartOf="@id/Main_line_text"
        app:layout_constraintTop_toBottomOf="@id/Main_line_text" />

    <RadioGroup
        android:id="@+id/donate_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/first_option"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/Second_line_text"
        app:layout_constraintTop_toBottomOf="@id/Second_line_text"
        >

        <RadioButton
            android:id="@+id/first_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal" />

        <RadioButton
            android:id="@+id/option_eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct" />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="351dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amount_of_donate"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:hint="@string/please_donate_us"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/amount"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <Button
        android:id="@+id/donate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate"
        app:layout_constraintTop_toBottomOf="@id/amount_of_donate"
        app:layout_constraintStart_toStartOf="@id/amount" />

    <TextView
        android:id="@+id/donate_result"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@id/donate_btn"
        app:layout_constraintStart_toEndOf="@id/donate_btn"
        app:layout_constraintTop_toBottomOf="@id/amount_of_donate"
        tools:text="Total so Far: ..." />


</androidx.constraintlayout.widget.ConstraintLayout>